Update background color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Background color for the whole page */
 body {
-  background-color: #f0f8ff;
+  background-color: #258DCB;
   font-family: Arial, sans-serif;
   text-align: center;
 }
