Update style.css change background image url

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   object-fit: cover; /* Ensure the image fills the screen while cropping if necessary */
 }
 .background-image {
-  background-image: url('images/Omnipresente.png');
+  background-image: url('images/background_image.png');
   background-size: cover; /* Scale to cover the screen */
   background-position: center; /* Center the image */
   width: 100vw; /* Full width */
