--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 /* Style for landscape screens */
 @media (orientation: landscape) {
   .conditional-image {
+    width: 70%;
     height: auto; /* Fill half the viewport height */
     object-fit: cover; /* Ensure it fills while cropping if necessary */
   }
