--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 #scroll-section {
   padding: 50px;
-  background-color: #f9f9f9;
+  background-color: #258DCB;
   margin-top: 50px;
   border-top: 2px solid #ccc;
  /* opacity: 0; Ensures content isn't visible until animation triggers */
