--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   background-color: #258DCB;
   margin-top: 50px;
   border-top: 2px solid #ccc;
- /* opacity: 0; Ensures content isn't visible until animation triggers */
+  opacity: 0; /*Ensures content isn't visible until animation triggers */
 }
 
 #scroll-section h1, #scroll-section p, #scroll-section blockquote {
